Added more Pages and Shell navigation Added more complex filter logic

--- a/WhatToDo/WhatToDo/WhatToDo.csproj
+++ b/WhatToDo/WhatToDo/WhatToDo.csproj
@@ -64,21 +64,31 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Update="Views\Templates\BlankTemplate.xaml.cs">
-	    <DependentUpon>BlankTemplate.xaml</DependentUpon>
+	  <Compile Update="Views\Pages\MainPage.xaml.cs">
+	    <DependentUpon>MainPage.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Views\Pages\PomodoroTimerPage.xaml.cs">
+	    <DependentUpon>PomodoroTimerPage.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Views\Pages\CustomListPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Pages\PomodoroTimerPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Pages\SuggestionPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\Pages\ToDoItemDetailsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Views\Templates\BlankTemplate.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Views\Templates\WeatherPreferencePopUpView.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Views\Templates\" />
 	</ItemGroup>
 
 </Project>
